--- a/src/layouts/providersLayout/providersLayout.scss
+++ b/src/layouts/providersLayout/providersLayout.scss
@@ -14,9 +14,4 @@
   .faq {
     width: 100%;
   }
-
-  .becomeProviderButton {
-    min-height: 40px;
-    margin: 0 140px 11px auto;
-  }
 }
